# 2025capstonedesign

./: .gitignore  README.md  README.txt  aruco1.py  tray.py
models/: gripper.stp  tray.stp  workspace_rayout.stp
src/path/: CMakeLists.txt  package.xml
src/path/launch/: path_planning.launch  scan.launch
src/path/src/: cook.py  move.py  octomap_checker.cpp  octomap_checker.py  path_cook.py  path_move.py
src/path/srv/: CheckCollision.srv
src/realsense_obstacle_detector/: CMakeLists.txt  package.xml
src/realsense_obstacle_detector/launch/: my_obstacle_detector.launch
src/realsense_obstacle_detector/msg/: ObstacleInfo.msg
src/realsense_obstacle_detector/scripts/: fake_robot_tf_publisher.py  publish_cube_base.py  relay_fixed_to_base.py  relay_stamp_only.py  relay_to_base.py
src/realsense_obstacle_detector/src/: obstacle_detector_node.cpp  pointcloud_range_filter.cpp
src/system/: CMakeLists.txt  package.xml
src/system/src/: camera_serial.py  cup1.py  cup2.py  detect.py  frying1.py  frying2.py  grilling1.py  grilling2.py  kiosk.py  person_detect.py  tray1.py  tray2.py
src/yolov5/models/: common.py
src/yolov5/train/0909cup/: opt.yaml
src/yolov5/train/person/: opt.yaml
