<?xml version="1.0"?>
<package format="2">
  <name>realsense_obstacle_detector</name>
  <version>0.0.0</version>
  <description>The realsense_obstacle_detector package</description>

  <maintainer email="gohero@todo.todo">gohero</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>message_generation</build_depend> <build_depend>opencv</build_depend> <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>pcl</build_export_depend>
  <build_export_depend>opencv</build_export_depend> <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>pcl</exec_depend>
  <exec_depend>message_runtime</exec_depend> <exec_depend>opencv</exec_depend> <depend>rospy</depend>         <depend>geometry_msgs</depend> <depend>std_msgs</depend>      <export>
    </export>
</package>
